# pvr.movistartv

./: .gitignore  README  configure.ac
addons/: Makefile.am
addons/pvr.movistartv/: Makefile.am
addons/pvr.movistartv/addon/: README.md  addon.xml.in
addons/pvr.movistartv/project/VS2010Express/: pvrclient_movistartv.vcxproj  pvrclient_movistartv.vcxproj.filters
addons/pvr.movistartv/src/: MovistarTV.cpp  MovistarTV.h  MovistarTVDVBSTP.cpp  MovistarTVDVBSTP.h  MovistarTVRPC.cpp  MovistarTVRPC.h  client.cpp  generic_socket.h
lib/cppmyth/project/VS2010Express/cppmyth/: libcppmyth.vcxproj  libcppmyth.vcxproj.filters
project/VS2010Express/: xbmc-pvr-movistartv.sln
